Fix for ::after alignment of caricature on Chrome.

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -119,6 +119,7 @@
 		transition: .25s all;
 
 		position: absolute;
+		top: 0;
 		left: 0;
 		
 		width: 100%;
